<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
        <relativePath></relativePath>
        <!-- lookup parent from repository -->
    </parent>
    <groupId>de.denktmit</groupId>
    <artifactId>aggregator</artifactId>
    <version>${revision}${sha1}${changelist}</version>
    <packaging>pom</packaging>
    <name>DenktMit eG :: Webapp :: Aggregator</name>
    <description>The DenktMit eG Webapp build aggregator</description>
    <modules>
        <module>application</module>
        <module>build-reports</module>
    </modules>
    <properties>
        <changelist>-SNAPSHOT</changelist>
        <goals.jib.packageGoal>dockerBuild</goals.jib.packageGoal>
        <java.version>17</java.version>
        <kotlin.version>1.8.22</kotlin.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>0.0.1</revision>
        <sha1></sha1>
        <!--suppress UnresolvedMavenProperty -->
        <skip.tests.all>${skipTests}</skip.tests.all>
        <skip.tests.e2e>${skip.tests.all}</skip.tests.e2e>
        <skip.tests.it>${skip.tests.all}</skip.tests.it>
        <skip.tests.unit>${skip.tests.all}</skip.tests.unit>
        <version.com.github.ekryd.sortpom.sortpom-maven-plugin>3.3.0</version.com.github.ekryd.sortpom.sortpom-maven-plugin>
        <version.com.google.cloud.tools.jib-maven-plugin>3.4.0</version.com.google.cloud.tools.jib-maven-plugin>
        <version.org.codehaus.mojo.flatten-maven-plugin>1.5.0</version.org.codehaus.mojo.flatten-maven-plugin>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.ekryd.sortpom</groupId>
                    <artifactId>sortpom-maven-plugin</artifactId>
                    <version>${version.com.github.ekryd.sortpom.sortpom-maven-plugin}</version>
                    <configuration>
                        <createBackupFile>false</createBackupFile>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <keepBlankLines>false</keepBlankLines>
                        <lineSeparator>\n</lineSeparator>
                        <nrOfIndentSpace>4</nrOfIndentSpace>
                        <predefinedSortOrder>custom_1</predefinedSortOrder>
                        <sortDependencies>scope</sortDependencies>
                        <sortProperties>true</sortProperties>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>sort</goal>
                            </goals>
                            <phase>initialize</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${version.com.google.cloud.tools.jib-maven-plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <parameters>true</parameters>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <skipTests>${skip.tests.it}</skipTests>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                        <includes>
                            <include>**/*IT.java</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <skipTests>${skip.tests.unit}</skipTests>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${version.org.codehaus.mojo.flatten-maven-plugin}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                            <phase>process-resources</phase>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                            <phase>clean</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <configuration>
                        <jvmTarget>${java.version}</jvmTarget>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                            <arg>-java-parameters</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                            <plugin>jpa</plugin>
                        </compilerPlugins>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-noarg</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>ci</id>
            <properties>
                <goals.jib.packageGoal>build</goals.jib.packageGoal>
                <skip.tests.all>false</skip.tests.all>
                <skip.tests.e2e>true</skip.tests.e2e>
            </properties>
        </profile>
        <profile>
            <id>e2e</id>
            <properties>
                <goals.jib.packageGoal>build</goals.jib.packageGoal>
                <skip.tests.e2e>false</skip.tests.e2e>
            </properties>
        </profile>
    </profiles>
</project>
